js/src/tests/test262/language/import/import-defer/errors/module-throws/third-party-evaluation-after-defer-import.js
import
defer
*
as
ns
from
"
.
/
throws_FIXTURE
.
js
"
;
asyncTest
(
async
(
)
=
>
{
let
err1
;
await
import
(
"
.
/
throws_FIXTURE
.
js
"
)
.
catch
(
(
e
)
=
>
{
err1
=
e
}
)
;
assert
.
sameValue
(
err1
.
someError
"
the
error
from
throws_FIXTURE
"
)
;
let
err2
;
try
{
ns
.
foo
}
catch
(
e
)
{
err2
=
e
}
;
assert
.
sameValue
(
err1
err2
"
Evaluation
errors
are
thrown
for
modules
evaluated
after
getting
the
deferred
namespace
"
)
;
}
)
;
